hot fix spacing

--- a/resume/styles.css
+++ b/resume/styles.css
@@ -101,5 +101,5 @@ ul {
 }
 
 .break {
-  margin: 1em 0;
+  padding: 1em 0;
 }
